# Core-GL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.rc  vcpkg.json
assets/mock/: satelliteData.txt
docs/: Architecture.md  STYLE_GUIDE.md
engine/: CMakeLists.txt
engine/include/terrakit/: TerraKit.h
engine/include/terrakit/core/: App.h  AppContext.h  Ellipsoid.h  Geodetic2D.h  Geodetic3D.h  Logger.h  Mesh.h  Renderable.h  Scene.h  SceneState.h  Transform.h  Window.h
engine/include/terrakit/core/config/: AppConfig.h  RenderContext.h  ResourceHandle.h  ResourceManager.h  SatelliteConfig.h
engine/include/terrakit/core/controllers/: CameraControls.h  SelectionControls.h
engine/include/terrakit/core/entities/: Camera.h  Globe.h  Satellite.h
engine/include/terrakit/core/geometry/: Ellipsoid.h
engine/include/terrakit/core/layers/: GlobeLayer.h  Layer.h  SatelliteLayer.h
engine/include/terrakit/core/libraries/: MaterialLibrary.h  MeshLibrary.h  ShaderLibrary.h  TextureLibrary.h
engine/include/terrakit/network/: Fetch.h  Queue.h
engine/include/terrakit/platform/: MainLoop.h  NetworkClient.h  OpenGLContext.h  OpenGLLoader.h
engine/include/terrakit/renderer/: IndexBuffer.h  Material.h  OpenGL.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
engine/src/core/: App.cpp  Geodetic2D.cpp  Geodetic3D.cpp  Logger.cpp  Mesh.cpp  Scene.cpp  Window.cpp
engine/src/core/config/: RenderContext.cpp  ResourceManager.cpp
engine/src/core/controllers/: CameraControls.cpp  SelectionControls.cpp
engine/src/core/entities/: Camera.cpp  Globe.cpp  Satellite.cpp
engine/src/core/geometry/: Ellipsoid.cpp  MeshFactory.cpp  MeshFactory.h  ObjectFactory.cpp  ObjectFactory.h
engine/src/core/layers/: GlobeLayer.cpp  SatelliteLayer.cpp
engine/src/core/libraries/: MaterialLibrary.cpp  MeshLibrary.cpp  ShaderLibrary.cpp  TextureLibrary.cpp
engine/src/core/materials/: MaterialFactory.cpp  MaterialFactory.h
engine/src/core/shaders/: Atmosphere.shader.h  Color.shader.h  Line.shader.h  Object.shader.h  Point.shader.h  ShaderNames.h
engine/src/network/: Fetch.cpp
engine/src/platform/desktop/: DesktopMainLoop.cpp  DesktopNetworkClient.cpp  DesktopOpenGLLoader.cpp
engine/src/platform/emscripten/: EmscriptenMainLoop.cpp  EmscriptenNetworkClient.cpp  EmscriptenOpenGLLoader.cpp
engine/src/renderer/: IndexBuffer.cpp  Material.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
examples/: CMakeLists.txt
examples/satelliteTracker/: CMakeLists.txt  SatelliteTracker.cpp  SatelliteTracker.h  main.cpp
src/: App.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/core/: App.cpp  App.h  AppContext.h  Geodetic2D.cpp  Geodetic2D.h  Geodetic3D.cpp  Geodetic3D.h  Scene.cpp  Scene.h  SceneState.h  Window.cpp  Window.h
src/core/controllers/: CameraControls.cpp  CameraControls.h  SelectionControls.cpp  SelectionControls.h
src/core/entities/: Mesh.cpp  Mesh.h  Renderable.h  Transform.h
src/core/entities/camera/: Camera.cpp  Camera.h
src/core/entities/objects/: Globe.cpp  Globe.h  Satellite.cpp  Satellite.h
src/core/geometry/: Ellipsoid.cpp  Ellipsoid.h  MeshFactory.cpp  MeshFactory.h  ObjectFactory.cpp  ObjectFactory.h
src/core/layers/: GlobeLayer.h  Layer.h  SatelliteLayer.cpp  SatelliteLayer.h
src/core/libraries/: MaterialLibrary.cpp  MaterialLibrary.h  MeshLibrary.cpp  MeshLibrary.h  ShaderLibrary.cpp  ShaderLibrary.h  TextureLibrary.cpp  TextureLibrary.h
src/core/materials/: Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h
src/core/shaders/: Atmosphere.shader.h  Color.shader.h  Object.shader.h  Point.shader.h  ShaderNames.h
src/data/: basic.shader.h  cam.shader.h  gradient.shader.h  point.shader.h  texture.shader.h
src/entities/: Camera.cpp  Camera.h  CameraControls.cpp  CameraControls.h  Material.h  Mesh.h  Renderable.h  Transform.h
src/network/: Fetch.cpp  Fetch.h  Queue.h
src/projects/satelliteTracker/: SatelliteTracker.cpp  SatelliteTracker.h
src/renderer/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/tests/: Test.h  TestBatchRenderingColor.cpp  TestBatchRenderingColor.h  TestClearColor.cpp  TestClearColor.h  TestColorQuad.cpp  TestColorQuad.h  TestEllipsoid.cpp  TestEllipsoid.h  TestImagePlacement.cpp  TestImagePlacement.h  TestImageShading.cpp  TestImageShading.h  TestMenu.cpp  TestMenu.h  TestSphere.cpp  TestSphere.h  TestUtils.h
src/tests/modules/: TmMove.cpp  TmMove.h
web/: CMakeLists.txt  shell.html
